--- a/公台html/12-函数.html
+++ b/公台html/12-函数.html
@@ -6,10 +6,13 @@
     <link rel="stylesheet" href="css/1.css"/>
 </head>
 <body>
-<script>
-    window.onload=function(){
-        alert(1);
-    };
-</script>
+<!--<script>-->
+    <!--window.onload=function(){-->
+        <!--alert(1);-->
+    <!--};-->
+<!--</script>-->
+<div>5</div>
+<br/>
+<div></div>
 </body>
 </html>
