--- a/公台html/12-函数.html
+++ b/公台html/12-函数.html
@@ -11,8 +11,8 @@
         <!--alert(1);-->
     <!--};-->
 <!--</script>-->
-<div>5</div>
+<div style="width:100px;background-color: red">5</div>
 <br/>
-<div></div>
+<div id="df"></div>
 </body>
 </html>
