--- a/公台html/17-value属性.html
+++ b/公台html/17-value属性.html
@@ -3,6 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
+    <link rel="stylesheet" href="css/1.css"/>
 </head>
 <body>
 <script>
@@ -17,7 +18,19 @@
 
     }
 </script>
-<input type="button" id="btn" value="按钮">
+<input type="button" id="btn" value="按钮" target="">
 <input type="text" name="text" id="text" value="这是一段文字">
+<a href="images/a.jpg" target="_blank" title="zheshitu">55</a>
+<div>
+    <input type="text"/><br/>
+    <input type="password"/>br
+
+
+    <form action="" enctype="multipart/form-data"></form>
+
+
+</div>
+
+
 </body>
 </html>
